--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,17 +1,17 @@
-Package: regsgov
-Type: Package
-Title: What the Package Does (Title Case)
-Version: 0.1
-Date: 2016-01-20
-Author: Who wrote it
-Maintainer: Who to complain to <yourfault@somewhere.net>
-Description: More about what it does (maybe more than one line)
-License: What license is it under?
-LazyData: TRUE
-Imports: 
+Package: regulations
+Title: R Client for the U.S. Federal Regulations API
+Version: 0.0.0.9000
+Authors@R: person("Stephen", "houser", email = "houser@bowdoin.edu", role = c("aut", "cre"))
+Description: This package provides access to the API for United States regulations at regulations.gov. The API provides access to all regulations, associated documents, and comments collected. The API returns basic details about each regulation and associated documents and provides the URLs for HTML, PDF, and plan text versions when available.
+Depends: R (>= 3.4.2)
+License: MIT
+Encoding: UTF-8
+LazyData: true
+Imports:
     dplyr,
     httr,
-    assertthat
+	assertthat
 Suggests: 
     testthat
 RoxygenNote: 5.0.1
+
