--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -4,14 +4,14 @@ Version: 0.0.0.9000
 Authors@R: person("Stephen", "houser", email = "houser@bowdoin.edu", role = c("aut", "cre"))
 Description: This package provides access to the API for United States regulations at regulations.gov. The API provides access to all regulations, associated documents, and comments collected. The API returns basic details about each regulation and associated documents and provides the URLs for HTML, PDF, and plan text versions when available.
 Depends: R (>= 3.4.2)
-License: MIT
+License: MIT + file LICENSE
 Encoding: UTF-8
 LazyData: true
 Imports:
+    jsonlite,
     dplyr,
     httr,
 	assertthat
 Suggests: 
     testthat
-RoxygenNote: 5.0.1
-
+RoxygenNote: 6.0.1
